--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /* General styles */
+
 body {
-	font-family: Arial, sans-serif;
+	font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
 	background-color: #f0f2f5;
 	margin: 0;
 	padding: 0;
@@ -18,7 +20,8 @@ header {
 
 header a {
 	color: white;
-	text-decoration: none;
+	text-decoration: underline;
+	margin-right: 20px;
 }
 
 header img {
@@ -146,3 +149,7 @@ select {
 	margin-right: 5px;
   }
   
+  .product-form{
+	margin-bottom: 10px;
+	margin-top: 10px;
+  }
