--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 /* General styles */
-
 body {
-	font-family: "DM Sans", sans-serif;
-  font-optical-sizing: auto;
+	font-family: Arial, sans-serif;
 	background-color: #f0f2f5;
 	margin: 0;
 	padding: 0;
@@ -20,8 +18,7 @@ header {
 
 header a {
 	color: white;
-	text-decoration: underline;
-	margin-right: 20px;
+	text-decoration: none;
 }
 
 header img {
@@ -149,7 +146,3 @@ select {
 	margin-right: 5px;
   }
   
-  .product-form{
-	margin-bottom: 10px;
-	margin-top: 10px;
-  }
