--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,11 @@ header img {
 
 .parent-container{
 	background-image: url(https://tailwindui.com/img/beams-basic.png);
-	background-size: cover;
+	background-color: #fff;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	min-height: 100vh;
+	background-attachment: fixed;
 }
 
 
